# IMCindividual

./: CMakeLists.txt  README.md
components/alrm/: CMakeLists.txt  alrm.c
components/alrm/include/: alrm.h
components/buttonHandler/: CMakeLists.txt  buttonHandler.c
components/buttonHandler/include/: buttonHandler.h
components/clockHandler/: CMakeLists.txt  clockHandler.c
components/clockHandler/include/: clockHandler.h
components/goertzel/: CMakeLists.txt  goertzel.c
components/goertzel/include/: goertzel.h
components/gpioButton/: CMakeLists.txt  gpioButton.c
components/gpioButton/include/: gpioButton.h
components/inputHandler/: CMakeLists.txt  inputHandler.c
components/inputHandler/include/: inputHandler.h
components/lcd/: CMakeLists.txt  LCD.c
components/lcd/include/: LCD.h
components/mainHandler/: mainHandler.c
components/mainHandler/include/: mainHandler.h
components/mcp23017/: CMakeLists.txt  mcp23017.c
components/mcp23017/include/: mcp23017.h
components/menu/: CMakeLists.txt  menu.c
components/menu/include/: menu.h
components/mqttReader/: CMakeLists.txt  mqttReader.c
components/radio/: CMakeLists.txt  radio.c
components/rotaryEncoder/: CMakeLists.txt  rlib.c  twistre.c
components/rotaryLED/: CMakeLists.txt  rotaryLED.c
components/sdcardrw/: CMakeLists.txt  sdcardrw.c
components/soundDetection/: CMakeLists.txt  soundDetection.c
components/talkingClock/: CMakeLists.txt  talkingClock.c
components/timeSync/: sntp_sync.c
components/timesync/: CMakeLists.txt  sntp_sync.c
main/: Kconfig.projbuild  main.c
(+23 files in other folders)
